WebXR: Fix incorrect AR frame dimensions

This regressed in https://chromium-review.googlesource.com/c/1197225, the frame
property updates were happening in the wrong code location.

Revert to the original code ordering, and add comments explaining the order
dependency.

BUG=897525

Change-Id: If88575c15de7ca3b069771362d4388f1a95aca06
Reviewed-on: https://chromium-review.googlesource.com/c/1297473
Reviewed-by: Bill Orr <billorr@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602163}
Former-commit-id: c863ca7f940596f692ac7aa0590d70ab930b3fcd